<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/activity_main"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="#787878"
   android:fitsSystemWindows="true"
   android:focusableInTouchMode="true"
   android:orientation="vertical"
   tools:context="com.example.takmilul.e_farming.Activity.MainActivity">
   
   <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/white_10_transparent"
      android:elevation="4dp"
      android:fitsSystemWindows="true"
      app:layout_scrollFlags="scroll|exitUntilCollapsed"
      app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
   
   <ScrollView
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:orientation="vertical">
         
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input_field"
            android:orientation="vertical">
            
            <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="48dp"
               android:gravity="center_vertical"
               android:textColorHint="@color/white_70_transparent">
               
               <EditText
                  android:id="@+id/nameET"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="#00000000"
                  android:cursorVisible="true"
                  android:hint="@string/name"
                  android:inputType="textPersonName"
                  android:paddingLeft="16.0dip"
                  android:paddingRight="16.0dip"
                  android:textColor="@color/white"
                  android:textCursorDrawable="@null"
                  android:textSize="16sp"/>
            
            </android.support.design.widget.TextInputLayout>
            
            <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp">
               
               <View
                  android:id="@+id/underline_view_name"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/color8"
                  android:visibility="invisible"/>
               
               <View
                  android:id="@+id/second_underline_view_name"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/red_5"
                  android:visibility="invisible"/>
            
            </FrameLayout>
         </LinearLayout>
         
         <TextView
            android:id="@+id/nameErrorTV"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="50"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
         
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_input_field"
            android:orientation="vertical">
            
            <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/login_input_field"
               android:orientation="vertical">
               
               <android.support.design.widget.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="48dp"
                  android:gravity="center_vertical"
                  android:textColorHint="@color/white_70_transparent">
                  
                  <EditText
                     android:id="@+id/adressET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:cursorVisible="true"
                     android:hint="@string/address"
                     android:inputType="textMultiLine"
                     android:paddingLeft="16.0dip"
                     android:paddingRight="16.0dip"
                     android:singleLine="true"
                     android:textColor="@color/white"
                     android:textCursorDrawable="@null"
                     android:textSize="16sp"/>
               
               </android.support.design.widget.TextInputLayout>
               
               <FrameLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dp">
                  
                  <View
                     android:id="@+id/underline_view_address"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
                     android:background="@color/color8"
                     android:visibility="invisible"/>
                  
                  <View
                     android:id="@+id/second_underline_view_address"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
                     android:background="@color/red_5"
                     android:visibility="invisible"/>
               
               </FrameLayout>
            </LinearLayout>
            
            <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingLeft="22dp">
               
               <Spinner
                  android:id="@+id/unionSpnr"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="50"/>
               
               <Spinner
                  android:id="@+id/thanaSpnr"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="50"/>
            </LinearLayout>
            
            
            <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingLeft="22dp">
               
               <Spinner
                  android:id="@+id/districtSpnr"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="50"/>
               
               <Spinner
                  android:id="@+id/divisionSpnr"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="50"/>
            
            </LinearLayout>
         </LinearLayout>
         
         <TextView
            android:id="@+id/addressErrorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
         
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input_field"
            android:orientation="vertical">
            
            <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="48dp"
               android:gravity="center_vertical"
               android:textColorHint="@color/white_70_transparent">
               
               <EditText
                  android:id="@+id/mobileNoET"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@null"
                  android:cursorVisible="true"
                  android:hint="@string/mobile"
                  android:inputType="phone"
                  android:paddingLeft="16.0dip"
                  android:paddingRight="16.0dip"
                  android:singleLine="true"
                  android:textColor="@color/white"
                  android:textCursorDrawable="@null"
                  android:textSize="16sp"/>
            
            </android.support.design.widget.TextInputLayout>
            
            <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp">
               
               <View
                  android:id="@+id/underline_view_mobile_no"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/color8"
                  android:visibility="invisible"/>
               
               <View
                  android:id="@+id/second_underline_view_mobile_no"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/red_5"
                  android:visibility="invisible"/>
            
            </FrameLayout>
         </LinearLayout>
         
         <TextView
            android:id="@+id/mobileErrorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
         
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input_field"
            android:orientation="vertical">
            
            <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="48dp"
               android:gravity="center_vertical"
               android:textColorHint="@color/white_70_transparent">
               
               <EditText
                  android:id="@+id/nidET"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@null"
                  android:cursorVisible="true"
                  android:hint="@string/nid"
                  android:inputType="phone"
                  android:paddingLeft="16.0dip"
                  android:paddingRight="16.0dip"
                  android:singleLine="true"
                  android:textColor="@color/white"
                  android:textCursorDrawable="@null"
                  android:textSize="16sp"/>
            
            </android.support.design.widget.TextInputLayout>
            
            <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp">
               
               <View
                  android:id="@+id/underline_view_nid"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/color8"
                  android:visibility="invisible"/>
               
               <View
                  android:id="@+id/second_underline_view_nid"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/red_5"
                  android:visibility="invisible"/>
            
            </FrameLayout>
         </LinearLayout>
         
         <TextView
            android:id="@+id/nidErrorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80.0dip"
            android:background="@drawable/login_input_field"
            android:orientation="vertical"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:textColor="@color/white"
            android:textColorHint="@color/white_70_transparent"
            android:textCursorDrawable="@null"
            android:textSize="16sp">
            
            <TextView
               android:id="@+id/typeOfFieldTV"
               android:layout_width="match_parent"
               android:layout_height="40.0dip"
               android:gravity="center_vertical"
               android:hint="@string/typeOfField"
               android:textColor="@color/white_70_transparent"
               android:textColorHint="@color/white_70_transparent"
               android:textSize="16.0dip"/>
            
            <Spinner
               android:id="@+id/typeOfFieldSpnr"
               android:layout_width="match_parent"
               android:layout_height="40.0dip"
               android:layout_weight="50"/>
         
         </LinearLayout>
         
         <TextView
            android:id="@+id/typeOfFieldErrorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
         
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input_field"
            android:orientation="vertical">
            
            <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="48dp"
               android:gravity="center_vertical"
               android:textColorHint="@color/white_70_transparent">
               
               <EditText
                  android:id="@+id/statusET"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@null"
                  android:cursorVisible="true"
                  android:hint="@string/status"
                  android:inputType="textMultiLine"
                  android:paddingLeft="16.0dip"
                  android:paddingRight="16.0dip"
                  android:singleLine="true"
                  android:textColor="@color/white"
                  android:textCursorDrawable="@null"
                  android:textSize="16sp"/>
            
            </android.support.design.widget.TextInputLayout>
            
            <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp">
               
               <View
                  android:id="@+id/underline_view_status"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/color8"
                  android:visibility="invisible"/>
               
               <View
                  android:id="@+id/second_underline_view_status"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/red_5"
                  android:visibility="invisible"/>
            
            </FrameLayout>
         </LinearLayout>
         
         <TextView
            android:id="@+id/statusErrorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
         
         <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ProgressBar
               android:id="@+id/progressBar"
               android:layout_width="32.0dip"
               android:layout_height="32.0dip"
               android:layout_gravity="center"
               android:indeterminate="true"/>
            
            <TextView
               android:id="@+id/saveButton"
               android:layout_width="match_parent"
               android:layout_height="48.0dip"
               android:background="@drawable/button_border"
               android:gravity="center"
               android:text="@string/save"
               android:textColor="@color/white_80_transparent"
               android:textSize="16sp"
               android:textStyle="bold"/>
         </FrameLayout>
      </LinearLayout>
   </ScrollView>
</LinearLayout>
